--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav {
 nav h1 {
   font-size: 2.2rem;
   letter-spacing: 5px;
+  padding-left: 2rem;
 }
 
 nav button {
@@ -47,6 +48,7 @@ nav button {
   flex-wrap: wrap;
   gap: 5px;
   padding: 10% 15%;
+  justify-content: center;
 }
 
 input {
@@ -57,7 +59,42 @@ input {
   font-size: 2.25rem;
   font-weight: bold;
   flex: 0 0 calc(20% - 10px);
-  caret-color: transparent;
+  text-transform: uppercase;
+  user-select: none;
+  pointer-events: none;
+  /* caret-color: transparent; */
+}
+
+.filled {
+  border: solid 2px;
+  transform: scale(1);
+  animation: shake 200ms linear;
+}
+
+@keyframes shake {
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.correct,
+.maybe,
+.wrong {
+  color: white;
+  border: solid 1px;
+}
+
+.correct {
+  background: green;
+}
+.maybe {
+  background: gold;
+}
+.wrong {
+  background: slategrey;
 }
 
 #keyboard {
@@ -80,7 +117,7 @@ button[data-val="A"] {
   margin-left: 5%;
 }
 
-#keyboard button[data-val="enter"],
-#keyboard button[data-val="backspace"] {
+#keyboard button[data-val="Enter"],
+#keyboard button[data-val="Backspace"] {
   width: 13%;
 }
