Update styles and keyboard button highlight

--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,7 @@ input {
   padding: 1rem 0;
 }
 
-#keyboard button {
+section button {
   background: lightgray;
   height: 50px;
   width: calc(10% - 9px);
@@ -120,4 +120,21 @@ button[data-val="A"] {
 #keyboard button[data-val="Enter"],
 #keyboard button[data-val="Backspace"] {
   width: 13%;
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    width: 95vw;
+    min-width: 95vw;
+    padding: 0;
+  }
+  .grid {
+    padding: 10vw 0vw;
+  }
+  #keyboard button[data-val="Enter"] {
+    width: 13%;
+  }
+  #keyboard button[data-val="Backspace"] {
+    width: 11%;
+  }
 }
