--- a/style.css
+++ b/style.css
@@ -25,9 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 50vw;
-  max-width: 500px;
-  min-width: 500px;
+  width: 500px;
   margin: 0 auto;
 }
 
@@ -59,22 +57,21 @@ main {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
-  padding: 10% 15%;
+  padding: 25px 50px;
   justify-content: center;
 }
 
 /* Input Boxes Styles */
 
 input {
-  aspect-ratio: 1;
   outline: none;
   text-align: center;
   border: solid 2px lightgray;
   font-size: 2.25rem;
   font-weight: bold;
-  flex: 0 0 calc(20% - 10px);
+  width: 65px;
+  height: 65px;
   text-transform: uppercase;
-  user-select: none;
   pointer-events: none;
 }
 
@@ -147,14 +144,13 @@ button[data-val="A"] {
 @media screen and (max-width: 400px) {
   body {
     width: 95vw;
-    min-width: 95vw;
     padding: 0;
   }
   main {
-    padding: 10vw 0 0;
+    padding: 30px;
   }
   #keyboard {
-    margin-top: 0;
+    margin-bottom: 1.5rem;
   }
   #keyboard button[data-val="Enter"] {
     width: 13%;
@@ -163,6 +159,7 @@ button[data-val="A"] {
     width: 11%;
   }
   input {
-    width: 20px;
+    width: 50px;
+    height: 50px;
   }
 }
